# mcp-local-rag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.github/agents/: rag.agent.md
.github/workflows/: publish.yml
docs/: architecture.md  configuration.md
src/mcp_local_rag/: __init__.py  config.py  context.py  server.py  telemetry.py
src/mcp_local_rag/processing/: __init__.py  chunking.py  embeddings.py  extractors.py  ocr.py
src/mcp_local_rag/storage/: __init__.py  metadata.py  vectors.py
src/mcp_local_rag/tools/: __init__.py  collections.py  documents.py  indexing.py  search.py
tests/: test_routing.py
