[project]
name = "mcp-local-rag"
dynamic = ["version"]
description = "Local MCP server for RAG over PDFs, DOCX, and plaintext files."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Jozef833", email = "172046463+Jozef833@users.noreply.github.com" }
]
keywords = ["mcp", "rag", "local", "pdf", "docx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "aiofiles>=25.1.0,<26",
    "google-genai[aiohttp]>=1.67.0,<2",
    "markitdown[docx]>=0.1.4,<1",
    "mcp[cli]>=1.26.0,<2",
    "numpy>=2.4.2,<3",
    "pydantic>=2.12.5,<3",
    "pymupdf-layout>=1.27.1,<2",
    "pymupdf4llm>=0.2.9,<1",
    "qdrant-client>=1.16.2,<2",
    "semantic-text-splitter>=0.29.0,<1",
    "sentence-transformers>=5.2.2,<6",
    "torch>=2.10.0,<3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project.optional-dependencies]
azure = [
    "azure-ai-documentintelligence>=1.0.2,<2",
    "azure-identity>=1.25.2,<2",
    "azure-monitor-opentelemetry>=1.8.6,<2",
]

[project.urls]
Homepage = "https://github.com/Milliman-CMHH/mcp-local-rag"
Repository = "https://github.com/Milliman-CMHH/mcp-local-rag"
Issues = "https://github.com/Milliman-CMHH/mcp-local-rag/issues"

[project.scripts]
mcp-local-rag = "mcp_local_rag:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcp_local_rag/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_local_rag"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_local_rag"]

[dependency-groups]
dev = [
    "mcp-local-rag[azure]",
    "pip-licenses>=5.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src"]
